fdo#58789: export field separators, fix series name display

Change-Id: I1edae1c2ec845a46d7a9a4ab2517784d2d68d51d